LayoutTests/http/tests/security/same-origin-websql-blocked-expected.txt
CONSOLE MESSAGE: line 5: Web SQL is deprecated. Please use IndexedDB instead.
This iframe should return a security error:



--------
Frame: '<!--frame1-->'
--------
SecurityError
